2004-09-14  Andy Wingo  <wingo@pobox.com>

	* package.ac: Some fixups.

	* docs/: Deleted. No more XML crap.

	* TODO, README, AUTHORS, NEWS: Freshly written.

	* files.ac: New file.

	* gnome/gw/gstreamer-spec.scm (initialize): Adapt for module name
	changes. Use load-defs-with-overrides.

	* gnome/gw/Makefile.am (libgw_guile_gnome_gstreamer_la_SOURCES):
	Don't dist the generated files.

2004-07-18  Andy Wingo  <wingo@pobox.com>

	* gnome/gstreamer.scm (with-gst-debug): New macro, sets specific
	debugging thresholds during the dynamic extent of its body.

2004-07-15  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gstreamer-support.[ch]: Fix to take a GstPad* when
	setting chain/link/get functions, add debug handlers.

2004-07-07  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gstreamer-spec.scm (<gstreamer-wrapset>): Fix
	depends-on!. (It was sitting in my tree uncommitted!)

2004-05-19  Andy Wingo  <wingo@pobox.com>

	* *: Split into its own arch category. Lots of deletions and
	moving around.

	* glib-checks.ac, gnome/gw, gnome/gw/Makefile.am: New files.

	* gnome/gstreamer/gw-gstreamer-spec.scm: Moved to
	gnome/gw/gstreamer-spec.scm.

	* gnome/gstreamer/gstreamer-support.[ch]: Moved to gnome/gw.

	* gnome/gstreamer/gstreamer-support.[ch],
	gnome/defs/gstreamer-overrides.defs: Macros wrapped as functions
	so the new libffi-based wrappers will work.

	* gnome/gstreamer/gstreamer-support.c: Remove legacy 0.6 code
	regarding GstData/GstBuffer.
	
	* gnome/gstreamer.scm: Show more detailed startup info.

2004-05-16  Andy Wingo  <wingo@pobox.com>

	* gnome/defs/gstreamer-overrides.defs: Update to remove all use of
	g-wrap API.

	* gnome/gstreamer/generics.scm: Deleted, it hasn't been used in a
	long time.

	* ChangeLog: Merged gnome/ChangeLog, gnome/gstreamer/ChangeLog,
	and gnome/defs/ChangeLog to this one.

2004-02-22  Andy Wingo  <wingo@pobox.com>

	* gnome/defs/gstreamer-overrides.defs (realize): New method on
	GstPad.
