@@ -1,1 +1,6 @@
 SUBDIRS = gnome examples
+
+EXTRA_DIST = guile-gnome-gstreamer.pc.in guile-gnome-gstreamer-uninstalled.pc.in
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = guile-gnome-gstreamer.pc
