@@ -1,2 +1,2 @@
-gstreamer/guile-gstreamer.pc
-gstreamer/guile-gstreamer-uninstalled.pc
+guile-gnome-gstreamer.pc
+guile-gnome-gstreamer-uninstalled.pc
