@@ -2,6 +2,6 @@ include $(top_srcdir)/common.mk
 
 moduledir = $(guilemoduledir)/gstreamer
 
-module_DATA = config.scm debug.scm
+module_DATA = debug.scm
 
 EXTRA_DIST = $(module_DATA)
